--- a/real_state/users/templates/home.html
+++ b/real_state/users/templates/home.html
@@ -9,8 +9,14 @@
 	{% if user.is_authenticated %}
 	<h1>Main page</h1>
 
-	<p class="text-center">See all the states</p>
-		{{ user }}
+	<p class="text-center">See all the estates</p>
+	{% for estate in estates %}
+		<div>
+			<h2>{% if estate.title %}{{ estate.title }}{% else %}{{ title }}{% endif %}</h2>
+			<p>{% if estate.description %}{{ estate.description }}{% else %}{{ description }}{% endif %}</p>
+			<p>{% if estate.coordinates %}{{ estate.coordinates }}{% else %}{{ coordinates }}{% endif %}</p>
+		</div>
+    {% endfor %}
 	{% else %}
 		<h1 class="text-center"> This information is only for registered users</h1>
 	{% endif %}
