refactor: add the api docs url

--- a/real_state/users/templates/home.html
+++ b/real_state/users/templates/home.html
@@ -7,7 +7,7 @@
 
 <div class="container py-5">
 	{% if user.is_authenticated %}
-	<h1>Main page</h1>
+	<h1><a href="http://localhost:8000/api/docs">API DOCS</a></h1>
 
 	<p class="text-center">See all the estates</p>
 	{% for estate in estates %}
