refactor: add basic page pagination

--- a/real_state/users/templates/home.html
+++ b/real_state/users/templates/home.html
@@ -11,12 +11,20 @@
 
 	<p class="text-center">See all the estates</p>
 	{% for estate in estates %}
-		<div>
-			<h2>{% if estate.title %}{{ estate.title }}{% else %}{{ title }}{% endif %}</h2>
-			<p>{% if estate.description %}{{ estate.description }}{% else %}{{ description }}{% endif %}</p>
-			<p>{% if estate.coordinates %}{{ estate.coordinates }}{% else %}{{ coordinates }}{% endif %}</p>
-		</div>
-    {% endfor %}
+            <div>
+                <h2>{% if estate.title %}{{ estate.title }}{% else %}{{ title }}{% endif %}</h2>
+                <p>{% if estate.description %}{{ estate.description }}{% else %}{{ description }}{% endif %}</p>
+                <p>{% if estate.coordinates %}{{ estate.coordinates }}{% else %}{{ coordinates }}{% endif %}</p>
+            </div>
+        {% endfor %}
+
+        {% if has_prev %}
+            <a href="?page={{ page_number|add:"-1" }}">Previous Page</a>
+        {% endif %}
+
+        {% if has_next %}
+            <a href="?page={{ page_number|add:"1" }}">Next Page</a>
+        {% endif %}
 	{% else %}
 		<h1 class="text-center"> This information is only for registered users</h1>
 	{% endif %}
