--- a/real_state/chats/templates/chat_home.html
+++ b/real_state/chats/templates/chat_home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Real State{% endblock %}
+{% block title %}Real State Chat{% endblock %}
 {% block content %}
 
 {% load crispy_forms_tags %}
@@ -8,24 +8,38 @@
 <div class="container py-5">
 	{% if user.is_authenticated %}
 	<p class="text-center">Real State Chat Api</p>
-	<form id="new-chat-form" method="POST" action="{% url 'new_chat' %}">
+
+	<form id="new-chat-form" method="POST" >
 		{% csrf_token %}
 		<button type="submit" class="btn btn-primary">New chat</button>
 	</form>
 
+	{% if chat_ids %}
+		<ul>
+
+		{% for id in chat_ids %}
+			<li><a href="{% url 'chat' id %}">Chat {{ id }}</a></li>
+		{% endfor %}
+				</ul>
+	{% endif %}
+
 	<script>
-		document.getElementById("new-chat-form").addEventListener("submit", function(event) {
-			event.preventDefault()
-			let xhr = new XMLHttpRequest();
-			xhr.open("POST", "{% url 'new_chat' %}");
-			xhr.setRequestHeader("Content-Type", "application/json");
-			xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
-			xhr.onload = function() {
-				window.location.href = xhr.getResponseHeader("Location");
-			};
-			xhr.send();
-		});
-    </script>
+    document.getElementById("new-chat-form").addEventListener("submit", function(event) {
+        event.preventDefault();
+        let xhr = new XMLHttpRequest();
+        xhr.open("POST", "{% url 'new_chat' %}");
+        xhr.setRequestHeader("Content-Type", "application/json");
+        xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
+        xhr.onload = function() {
+            if (xhr.status === 200) {
+                let response_data = JSON.parse(xhr.responseText);
+                let chat_id = response_data.chat_id;
+                window.location.href = `chat/${chat_id}/`;
+            }
+        };
+        xhr.send();
+    });
+</script>
 
 	{% else %}
 		<h1 class="text-center"> This information is only for registered users</h1>
