--- a/real_state/real_state/templates/base.html
+++ b/real_state/real_state/templates/base.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
+{%load static%}
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    {% block styles %} <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">{% endblock %}
     <title>{% block title %}Real Estate{% endblock %}</title>
   </head>
 
@@ -33,16 +35,17 @@
       </div>
     </div>
   </nav>
-  <div class="container">
-      {% if messages %}
-        {% for message in messages %}
-            <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
-                {{ message }}
-            </div>
-        {% endfor %}
-    {% endif %}
-    {% block content %}
-    {% endblock content %}
-  </div>
+  {% block content %}
+    <div class="container">
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
+    </div>
+  {% endblock content %}
+
 </body>
 </html>
